--- a/setup.cfg
+++ b/setup.cfg
@@ -10,6 +10,7 @@ disallow_untyped_calls = True
 follow_imports = silent
 strict_optional = True
 ignore_missing_imports = True
+show_error_codes = True
 
 [flake8]
 max-line-length = 100
