--- a/.gitignore
+++ b/.gitignore
@@ -71,6 +71,6 @@ README.html
 envs.txt
 test_build_logs/*.log
 build/miniconda3.sh
-
+compat_test/
 # binaries should be downloaded/generated before dist
 src/markdown_svgbob/bin/
