--- a/setup.cfg
+++ b/setup.cfg
@@ -75,7 +75,7 @@ addopts = --doctest-modules
 
 
 [pycalver]
-current_version = v202001.0013-beta
+current_version = v202006.1014
 version_pattern = "{pycalver}"
 commit = True
 tag = True
