--- a/setup.cfg
+++ b/setup.cfg
@@ -12,6 +12,14 @@ strict_optional = True
 ignore_missing_imports = True
 show_error_codes = True
 
+[tool:isort]
+known_first_party = markdown_katex
+known_third_party = pathlib2
+force_single_line = True
+length_sort = True
+line_length = 100
+
+
 [flake8]
 max-line-length = 100
 max-complexity = 10
@@ -93,3 +101,25 @@ src/markdown_svgbob/__init__.py =
 README.md =
     [PyCalVer {version}]
     https://img.shields.io/static/v1.svg?label=PyCalVer&message={version}&color=blue
+
+
+[tool:pylint]
+score = yes
+jobs = 1        # >1 may hide results
+output-format = colorized
+# Maximum number of locals for function / method body
+max-locals = 25
+# Maximum number of arguments for function / method
+max-args = 10
+extension-pkg-whitelist = numpy,pandas,lxml,PIL,sklearn,pyblake2
+# List of note tags to take in consideration, separated by a comma.
+notes=FIXME,XXX,TODO,SLOW,BUG
+# http://pylint.pycqa.org/en/latest/technical_reference/features.html
+disable =
+    logging-fstring-interpolation,
+    no-else-return,
+    no-else-raise,
+    bad-whitespace,
+    missing-module-docstring,
+    missing-class-docstring,
+    missing-function-docstring,
