--- a/setup.cfg
+++ b/setup.cfg
@@ -120,6 +120,7 @@ disable =
     no-else-return,
     no-else-raise,
     bad-whitespace,
+    bad-continuation,
     missing-module-docstring,
     missing-class-docstring,
     missing-function-docstring,
