--- a/setup.cfg
+++ b/setup.cfg
@@ -13,7 +13,7 @@ ignore_missing_imports = True
 show_error_codes = True
 
 [tool:isort]
-known_first_party = markdown_katex
+known_first_party = markdown_svgbob
 known_third_party = pathlib2
 force_single_line = True
 length_sort = True
