--- a/setup.cfg
+++ b/setup.cfg
@@ -56,6 +56,8 @@ ignore =
     D102
     # Missing docstring in public function
     D103
+    # Missing docstring in public package
+    # D104
     # Missing docstring in magic method
     # D105
     # Missing docstring on __init__
