--- a/setup.cfg
+++ b/setup.cfg
@@ -114,9 +114,9 @@ README.md =
 
 [tool:pylint]
 score = no
+reports = no
 
-# pylint-ignore only works with jobs = 1
-jobs = 1
+jobs = 4
 
 # Set the output format. Available formats are text, parseable, colorized,
 # msvs (visual studio) and html. You can also give a reporter class, eg
@@ -136,6 +136,12 @@ good-names = logger,i,ex
 extension-pkg-whitelist = numpy,pandas,lxml,PIL,sklearn,pyblake2
 
 notes=TODO,FIXME,XXX,SLOW,BUG
+
+# similarities/duplicaition checker
+min-similarity-lines=4
+ignore-comments=yes
+ignore-docstrings=yes
+ignore-imports=yes
 
 # https://pylint.pycqa.org/en/stable/technical_reference/features.html
 disable =
