--- a/setup.cfg
+++ b/setup.cfg
@@ -9,6 +9,7 @@ check_untyped_defs = True
 disallow_untyped_calls = True
 follow_imports = silent
 strict_optional = True
+error_summary = False
 ignore_missing_imports = True
 show_error_codes = True
 warn_unreachable = True
@@ -22,7 +23,6 @@ known_first_party = markdown_svgbob
 known_third_party = pathlib2
 force_single_line = True
 length_sort = True
-line_length = 100
 
 
 [flake8]
