fix md-to-html with Markdown>=3.3

--- a/setup.cfg
+++ b/setup.cfg
@@ -91,14 +91,14 @@ exclude =
 addopts = --doctest-modules
 
 
-[pycalver]
+[bumpver]
 current_version = v202006.1015
-version_pattern = "{pycalver}"
+version_pattern = "vYYYY0M.BUILD[-TAG]"
 commit = True
 tag = True
 push = True
 
-[pycalver:file_patterns]
+[bumpver:file_patterns]
 bootstrapit.sh =
     PACKAGE_VERSION="{version}"
 setup.cfg =
@@ -107,9 +107,15 @@ setup.py =
     version="{pep440_version}"
 src/markdown_svgbob/__init__.py =
     __version__ = "{version}"
+LICENSE =
+    Copyright (c) 2019-YYYY Manuel Barkhau
+license.header =
+    Copyright (c) 2019-YYYY Manuel Barkhau
+src/markdown_katex/*.py =
+    Copyright (c) 2019-YYYY Manuel Barkhau
 README.md =
-    [PyCalVer {version}]
-    https://img.shields.io/static/v1.svg?label=PyCalVer&message={version}&color=blue
+    \[CalVer {version}\]
+    https://img.shields.io/static/v1.svg?label=CalVer&message={version}&color=blue
 
 
 [tool:pylint]
