--- a/setup.cfg
+++ b/setup.cfg
@@ -111,7 +111,7 @@ LICENSE =
     Copyright (c) 2019-YYYY Manuel Barkhau
 license.header =
     Copyright (c) 2019-YYYY Manuel Barkhau
-src/markdown_katex/*.py =
+src/markdown_svgbob/*.py =
     Copyright (c) 2019-YYYY Manuel Barkhau
 README.md =
     \[CalVer {version}\]
