update svgbob to 0.6.2

--- a/setup.cfg
+++ b/setup.cfg
@@ -163,3 +163,4 @@ disable =
     missing-module-docstring,
     missing-class-docstring,
     missing-function-docstring,
+    consider-using-f-string,
