--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,8 @@
 license_file = LICENSE
 
 [bdist_wheel]
-universal = 1
+# by default, not python 2 compatible
+universal = 0
 
 [mypy]
 check_untyped_defs = True
@@ -75,16 +76,13 @@ ignore =
     D400
     # First line should be in imperative mood
     D401
-select = A,AAA,D,C,E,F,W,H,B,D212,D404,D405,D406,B901,B950
+select = A,AAA,D,C,E,F,W,H,B,D212,D404,D405,D406,B901,B950,YTT
 exclude =
     .git
     __pycache__
     .eggs/
     dist/
     .mypy_cache
-
-# Hopefully this can be resolved, so D404, D405 start working
-# https://github.com/PyCQA/pydocstyle/pull/188
 
 
 [tool:pytest]
